force-app/main/default/objects/ACME_Lead_Scoring_Rule__mdt/ACME_Lead_Scoring_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Lead Scoring Rule</label>
    <pluralLabel>Lead Scoring Rules</pluralLabel>
</CustomObject>