force-app/main/default/objects/ACME_Lead_Scoring_Rule__mdt/fields/Calculation_Logic__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Logic__c</fullName>
    <label>Calculation Logic</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>