force-app/main/default/objects/ACME_Lead_Scoring_Rule__mdt/fields/Criteria_Type__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Type__c</fullName>
    <label>Criteria Type</label>
    <type>Text</type>
    <length>255</length>
</CustomField>