force-app/main/default/objects/ACME_Lead_Scoring_Rule__mdt/fields/Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Rule_Name__c</fullName>
    <label>Rule Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>